<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/my_videos"
        android:title="@string/my_videos"
        android:icon="@drawable/video_icon" />

    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        android:icon="@drawable/setting_icon"/>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/help"/>

    <item
        android:id="@+id/rate_the_app"
        android:title="@string/rate_the_app"
        android:icon="@drawable/rate"/>

    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        android:icon="@drawable/contact_us"/>

</menu>