<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGreen"
    tools:context="com.nikhil.spycam.activities.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGreen"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".Help" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/how"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="#FFFFFF"
                        android:text="@string/how_to_use" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/text1"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/how"
                        android:text="@string/click_on_1" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/recorderImage"
                        android:layout_toRightOf="@id/text1"
                        android:layout_alignBottom="@id/text1"
                        android:layout_alignTop="@id/text1"
                        android:src="@drawable/record_video"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/start_video"
                        android:layout_toRightOf="@id/recorderImage"
                        android:layout_marginLeft="5dp"
                        android:layout_alignTop="@id/text1"
                        android:layout_alignBottom="@id/text1"/>



                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/line2"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/notification_help"
                        android:layout_below="@id/recorderImage" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/line3"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/help_preview"
                        android:layout_below="@id/line2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/line4"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/help_stop_video"
                        android:layout_below="@id/line3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/line5"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/help_come_back"
                        android:layout_below="@id/line4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/line6"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/help_click_on"
                        android:layout_below="@id/line5" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/stopImage"
                        android:layout_toRightOf="@id/line6"
                        android:layout_alignBottom="@id/line6"
                        android:layout_alignTop="@id/line6"
                        android:src="@drawable/stop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/help_stop_video_recording"
                        android:layout_toRightOf="@id/stopImage"
                        android:layout_marginLeft="5dp"
                        android:layout_alignTop="@id/stopImage"
                        android:layout_alignBottom="@id/stopImage"/>

                </RelativeLayout>

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/LinearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".Help" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/how_to_delete"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="#FFFFFF"
                        android:text="@string/how_to_delete" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_R2_1"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/how_to_delete"
                        android:text="@string/help_go_to_video" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_R2_2"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/text_R2_1"
                        android:text="@string/help_long_press" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_R2_3"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/text_R2_2"
                        android:text="@string/help_click_on_3" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/deleteImage"
                        android:layout_toRightOf="@id/text_R2_3"
                        android:layout_alignBottom="@id/text_R2_3"
                        android:layout_alignTop="@id/text_R2_3"
                        android:src="@drawable/deleteicon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/help_delete_video"
                        android:layout_toRightOf="@id/deleteImage"
                        android:layout_marginLeft="5dp"
                        android:layout_alignTop="@id/deleteImage"
                        android:layout_alignBottom="@id/deleteImage"/>


                </RelativeLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/navigation_view_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>
