<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_us"
    android:background="@color/colorDarkGreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nikhil.spycam.activities.ContactUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorLightGreen">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_query" />

            <TextView
            android:layout_width="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_email_one" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:text="@string/contact_us_email_two" />
      </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/navigation_view_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>
